<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="3dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="3dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_teamLogo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/debug_brazil_flag_round" />

        <views.OpenSansTextView
            android:id="@+id/text_teamTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/team_c"
            android:textColor="@color/primary"
            android:textSize="11sp" />
    </LinearLayout>

    <views.OpenSansTextView
        android:id="@+id/text_gp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/gp"
        android:textColor="@color/primary"
        android:textSize="11sp" />

    <views.OpenSansTextView
        android:id="@+id/text_w"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/w"
        android:textColor="@color/primary"
        android:textSize="11sp" />

    <views.OpenSansTextView
        android:id="@+id/text_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/d"
        android:textColor="@color/primary"
        android:textSize="11sp" />

    <views.OpenSansTextView
        android:id="@+id/text_l"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/l"
        android:textColor="@color/primary"
        android:textSize="11sp" />

    <views.OpenSansTextView
        android:id="@+id/text_pts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pts"
        android:textColor="@color/primary"
        android:textSize="11sp" />

    <views.OpenSansTextView
        android:id="@+id/text_gs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/gs"
        android:textColor="@color/primary"
        android:textSize="11sp" />

    <views.OpenSansTextView
        android:id="@+id/text_gc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/gc"
        android:textColor="@color/primary"
        android:textSize="11sp" />

    <views.OpenSansTextView
        android:id="@+id/text_gd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/gd"
        android:textColor="@color/primary"
        android:textSize="11sp" />
</LinearLayout>