<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SKCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/card_view_margin">

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <views.OpenSansSemiBoldTextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Group A"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <views.OpenSansSemiBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/team_c"
                android:textColor="@color/primary"
                android:textSize="11sp" />

            <views.OpenSansSemiBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gp"
                android:textColor="@color/primary"
                android:textSize="11sp" />

            <views.OpenSansSemiBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/w"
                android:textColor="@color/primary"
                android:textSize="11sp" />

            <views.OpenSansSemiBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/d"
                android:textColor="@color/primary"
                android:textSize="11sp" />

            <views.OpenSansSemiBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/l"
                android:textColor="@color/primary"
                android:textSize="11sp" />

            <views.OpenSansSemiBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pts"
                android:textColor="@color/primary"
                android:textSize="11sp" />

            <views.OpenSansSemiBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gs"
                android:textColor="@color/primary"
                android:textSize="11sp" />

            <views.OpenSansSemiBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gc"
                android:textColor="@color/primary"
                android:textSize="11sp" />

            <views.OpenSansSemiBoldTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gd"
                android:textColor="@color/primary"
                android:textSize="11sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gray_screen_bg" />

        <views.ExpandableHeightListView
            android:id="@+id/list_standings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false"
            android:listSelector="@null" />
    </LinearLayout>
</android.support.v7.widget.CardView>